--- a/Attention Deficit Hyperactivity Disorder.html
+++ b/Attention Deficit Hyperactivity Disorder.html
@@ -36,24 +36,24 @@
         </button>
 
         <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="Home.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-            <li class="nav-item dropdown">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a href="Home.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="Takl About It.html" class="nav-link">Takl About It</a></li>
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="Anxiety Disorder.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Types of Mental Illnesss</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
                 <a class="dropdown-item" href="Anxiety Disorder.html">Anxiety Disorder</a>
-                <a class="dropdown-item" href="Attention Deficit Hyperactivity Disorder.html">Attention Deficit Hyperactivity Disorder (ADHD)</a>
-                <a class="dropdown-item" href="Autism.html">Autism</a>
-                <a class="dropdown-item" href="Clinical Depression.html">Clinical Depression</a>
-                <a class="dropdown-item" href="Obsessive Compulsive Disorder.html">Obsessive Compulsive Disorder (OCD)</a>
-                <a class="dropdown-item" href="Post-Traumatic Stress Disorder.html">Post-Traumatic Stress Disorder (PTSD)</a>
+                <a class="dropdown-item" href="portfolio-single.html">Attention Deficit Hyperactivity Disorder (ADHD)</a>
+                <a class="dropdown-item" href="portfolio-single.html">Autism</a>
+                <a class="dropdown-item" href="portfolio-single.html">Clinical Depression</a>
+                <a class="dropdown-item" href="portfolio-single.html">Obsessive Compulsive Disorder (OCD)</a>
+                <a class="dropdown-item" href="portfolio-single.html">Post-Traumatic Stress Disorder (PTSD)</a>
               </div>
           </li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-            <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>
-          </ul>
-        </div>
+          <li class="nav-item active"><a href="About Us and Contact US.html" class="nav-link">About Us & Contact US</a></li>
+          <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>
+        </ul>
+      </div>
       </div>
     </nav>
     <!-- END nav -->
@@ -111,6 +111,7 @@
           </div>
       </div>
     </section>
+    
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
         <div class="row mb-5">
@@ -134,7 +135,7 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Contact Information</h2>
               <ul class="list-unstyled">
-                <li><a href="https://www.google.com/maps/dir/28.4938441,77.4107931/Shiv+Nadar+School+Noida,+Plot+No+-SS,+1,+Noida-Greater+Noida+Expy,+Sector+168,+Noida,+Uttar+Pradesh+201305/@28.4947376,77.4091445,17z/data=!3m1!4b1!4m17!1m6!3m5!1s0x390ce42f2c86894f:0x3f22d6386a33c560!2sShiv+Nadar+School+Noida!8m2!3d28.494851!4d77.4116717!4m9!1m1!4e1!1m5!1m1!1s0x390ce42f2c86894f:0x3f22d6386a33c560!2m2!1d77.4116717!2d28.494851!3e0" target="_blank"class="py-2 d-block">Plot No -SS, 1,
+                <li><a href="https://www.google.com/maps/place/Shiv+Nadar+School+Noida/@28.494851,77.409483,17z/data=!3m1!4b1!4m5!3m4!1s0x390ce42f2c86894f:0x3f22d6386a33c560!8m2!3d28.494851!4d77.4116717" target="_blank"class="py-2 d-block">Plot No -SS, 1,
                 <br>
                 Noida-Greater Noida Expy,
                 <br>
@@ -148,11 +149,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart" aria-hidden="true"></i>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <div class="col-md-12 text-center">\
+            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart" aria-hidden="true"></i><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
       </div>
