--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active"><a href="Home.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="Home.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="Takl About It.html" class="nav-link">Takl About It</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="Anxiety Disorder.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Types of Mental Illnesss</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
                 <a class="dropdown-item" href="Anxiety Disorder.html">Anxiety Disorder</a>
-                <a class="dropdown-item" href="Attention Deficit Hyperactivity Disorder.html">Attention Deficit Hyperactivity Disorder (ADHD)</a>
-                <a class="dropdown-item" href="Autism.html">Autism</a>
-                <a class="dropdown-item" href="Clinical Depression.html">Clinical Depression</a>
-                <a class="dropdown-item" href="Obsessive Compulsive Disorder.html">Obsessive Compulsive Disorder (OCD)</a>
-                <a class="dropdown-item" href="Post-Traumatic Stress Disorder.html">Post-Traumatic Stress Disorder (PTSD)</a>
+                <a class="dropdown-item" href="portfolio-single.html">Attention Deficit Hyperactivity Disorder (ADHD)</a>
+                <a class="dropdown-item" href="portfolio-single.html">Autism</a>
+                <a class="dropdown-item" href="portfolio-single.html">Clinical Depression</a>
+                <a class="dropdown-item" href="portfolio-single.html">Obsessive Compulsive Disorder (OCD)</a>
+                <a class="dropdown-item" href="portfolio-single.html">Post-Traumatic Stress Disorder (PTSD)</a>
               </div>
           </li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
+          <li class="nav-item"><a href="About Us and Contact US.html.html" class="nav-link">About Us & Contact US</a></li>
           <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-6 ftco-animate text-center" data-scrollax=" properties: { translateY: '70%' }">
-            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">We love to create <strong>Beautiful</strong> websites</h1>
+            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Embracing The <strong>Fragmented</strong> Pieces</h1>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="#" class="btn btn-primary btn-outline-white px-5 py-3">Get in touch</a></p>
           </div>
         </div>
@@ -251,7 +251,7 @@
               <h2>Subcribe to our Newsletter</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
               <div class="row d-flex justify-content-center mt-5">
-                <div class="col-md-6">
+                <div class="col-md-6">    
                   <form action="#" class="subscribe-form">
                     <div class="form-group">
                       <span class="icon icon-paper-plane"></span>
@@ -499,7 +499,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Snipp.</h2>
+              <h2 class="ftco-heading-2">Splintered</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
           </div>
@@ -507,10 +507,9 @@
             <div class="ftco-footer-widget mb-4 ml-5">
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Home</a></li>
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Types of Mental Illness</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                <li><a href="Home.html" class="py-2 d-block">Home</a></li>
+                <li><a href="About US.html" class="py-2 d-block">About</a></li>
+                <li><a href="Contact Us.html" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
           </div>
@@ -518,27 +517,22 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Contact Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li>
-                <li><a href="https://mail.google.com/mail/u/3/?ogbl#inbox?compose=new" class="py-2 d-block">splintered.help@gmail.com</a></li>
+                <li><a href="https://www.google.com/maps/place/Shiv+Nadar+School+Noida/@28.494851,77.409483,17z/data=!3m1!4b1!4m5!3m4!1s0x390ce42f2c86894f:0x3f22d6386a33c560!8m2!3d28.494851!4d77.4116717" target="_blank"class="py-2 d-block">Plot No -SS, 1,
+                <br>
+                Noida-Greater Noida Expy,
+                <br>
+                Sector 168, Noida,
+                <br>
+                Uttar Pradesh 201305</a></li>
+                <li><a href="https://mail.google.com/mail/u/3/?ogbl#inbox?compose=new" class="py-2 d-block" target="_blank">splintered.help@gmail.com</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart" aria-hidden="true"></i>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <div class="col-md-12 text-center">\
+            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart" aria-hidden="true"></i><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
       </div>
